@@ -7,5 +7,5 @@
 /* -1 means wrong password, 0 means another error, 1 means great */
 gint 		su_run_with_password (gchar *exec_path, gchar *password);
 
-gchar*		get_size_string (gint size);
+gchar*		get_size_string (gfloat size);
 #endif
