@@ -1,3 +1,10 @@
+2001-11-09  Kevin Vandersloot <kfv101@psu.edu>
+
+	* callbacks.c: get disk sizing right
+
+	* util.c (get_size_string): change to use gfloat since
+	there were issues passing in gints
+
 2001-11-08  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: handle removing processes properly
